完善了代码，但config内容的结构仍然需要优化，目前仍然存在无法在config中定位常用超参数，文件名引用混乱的问题

--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,11 @@ dataset/UNet_dataset/training_set/src/process.py
 
 # 忽略模型文件
 *.h5
-*.mdf5
+*.hdf5
 
 # 忽略文件夹
 /src_dataset
 __pycache__
 /Test
 /Checkpoint
+/Outputs
